# cadence

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  build.sh  deploy.sh  mkdocs.yml  publish.sh  pyproject.toml  pytest.ini  zensical.toml
.github/workflows/: docs.yml  make-docs.yml
.rules/: CLEANCODE.md  CLEANCODE_PY.md
devops/: README.md
devops/local/: README.md  database.yaml
devops/production/: .env.example  README.md  database.yaml
docker/: Dockerfile  compose.yaml
docs/: index.md
docs/backend/: admin.md  auth.md  chat.md  configuration.md  index.md  orchestrator-lifecycle.md  plugins.md  startup.md
docs/concepts/: architecture.md  langgraph-architecture.md  plugin-system.md  project-structure.md
docs/contributing/: code-style.md  development.md  testing.md
docs/deployment/: environment.md  production.md
docs/frontend/: admin.md  auth.md  chat.md  index.md  orchestrators.md
docs/getting-started/: notices.md  quick-start.md
docs/guide/: features.md  glossary.md  roles.md
docs/plans/: 2026-03-07-global-orchestrator-settings.md
docs/plugins/: first-plugin.md  overview.md  upload-feature.md
docs/sdk/: discovery.md  index.md  plugin-development.md  settings.md  tools.md
migrations/: env.py  schema.sql
migrations/versions/: 0001_initial_schema.py
scripts/: .gitignore  README.md  bootstrap.py  build_docs.sh  docker.sh  generate_openapi.py  init_db.py  openapi_schema.json  setup-dev.sh
src/cadence/: __init__.py  _middleware.py  _openapi.py  _routers.py  _startup.py  cli.py  constants.py  main.py
tests/: conftest.py
tests/api/: conftest.py  test_admin_api.py  test_chat_api.py  test_health_api.py  test_orchestrator_api.py  test_tenant_api.py
tests/unit/: test_config.py  test_conversation_service.py  test_engine_factory.py  test_engine_pool.py  test_exceptions.py  test_langgraph_supervisor.py  (+12 more)
(+248 files in other folders)
